--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,18 @@ dependencies:
   file_picker: ^4.6.1
   better_player: ^0.0.83
   crypto: ^3.0.2
+  firebase_auth: ^4.6.3
+  firebase_core: ^2.14.0
+  firebase_analytics: ^10.4.3
+  firebase_messaging: ^14.6.3
+  cloud_firestore: ^4.8.1
+  animated_text_kit: ^4.2.2
+  intl: ^0.18.1
+  flutter_video_info: ^1.3.1
+  http: ^1.0.0
+  socket_io_client: ^2.0.2
+  pointycastle: ^3.7.3
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
