--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   socket_io_client: ^2.0.2
   pointycastle: ^3.7.3
   path: ^1.8.3
+  image_picker: ^0.8.9
 
 dev_dependencies:
   flutter_test:
