--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,14 +44,19 @@ dependencies:
   firebase_analytics: ^10.4.3
   firebase_messaging: ^14.6.3
   cloud_firestore: ^4.8.1
-  animated_text_kit: ^4.2.2
+  #animated_text_kit: ^4.2.2
   intl: ^0.18.1
   flutter_video_info: ^1.3.1
   http: ^1.0.0
   socket_io_client: ^2.0.2
-  pointycastle: ^3.7.3
-  path: ^1.8.3
-  image_picker: ^0.8.9
+  #pointycastle: ^3.7.3
+  #path: ^1.8.3
+  #image_picker: ^0.8.9
+  #chewie: ^1.5.0
+  #video_player: ^2.6.1
+  #permission_handler: ^10.3.0
+  #path_provider: ^2.0.15
+  #file_selector: ^0.9.4
 
 dev_dependencies:
   flutter_test:
