--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,8 +47,9 @@ dependencies:
   #animated_text_kit: ^4.2.2
   intl: ^0.18.1
   flutter_video_info: ^1.3.1
-  http: ^1.0.0
+  http: ^1.1.0
   socket_io_client: ^2.0.2
+  retry: ^3.1.2
   #pointycastle: ^3.7.3
   #path: ^1.8.3
   #image_picker: ^0.8.9
